[gd_scene load_steps=9 format=3 uid="uid://ck7p0h0yl242b"]

[ext_resource type="Script" path="res://Scenes/mini_games/Crossword_Puzzle/crossword_minigame.gd" id="1_2buhs"]
[ext_resource type="Texture2D" uid="uid://dcm6p18p7lslf" path="res://Assets/Sprites/generic_items/genericItem_color_160.png" id="2_u0irq"]
[ext_resource type="Texture2D" uid="uid://ccei2f1iopui6" path="res://Assets/Crossword_Assets/Andragogy.png" id="3_j7o30"]
[ext_resource type="Texture2D" uid="uid://tbxv0y71tunf" path="res://Assets/Crossword_Assets/Constructivism.png" id="4_wlmub"]
[ext_resource type="Texture2D" uid="uid://c0xlsuc3xgob7" path="res://Assets/Crossword_Assets/Cognitivism.png" id="5_flse2"]
[ext_resource type="Texture2D" uid="uid://b5j2o4fvsusb1" path="res://Assets/Crossword_Assets/Experiential_Learning_.png" id="6_iyd71"]
[ext_resource type="Texture2D" uid="uid://bt16jy3rwsnji" path="res://Assets/Crossword_Assets/Social_Learning.png" id="7_a6isc"]

[sub_resource type="LabelSettings" id="LabelSettings_gqysk"]
font_size = 40

[node name="Crossword_Minigame" type="Node2D"]
script = ExtResource("1_2buhs")

[node name="Temp_Background" type="ColorRect" parent="."]
offset_top = 1.0
offset_right = 1922.0
offset_bottom = 1080.0
color = Color(0.694118, 0.431373, 0.431373, 1)

[node name="Word1" type="Label" parent="."]
offset_left = 281.0
offset_top = 164.0
offset_right = 588.0
offset_bottom = 233.0
text = "andragogy"
label_settings = SubResource("LabelSettings_gqysk")

[node name="Word2" type="Label" parent="."]
offset_left = 287.0
offset_top = 267.0
offset_right = 594.0
offset_bottom = 336.0
text = "social learning"
label_settings = SubResource("LabelSettings_gqysk")

[node name="Word3" type="Label" parent="."]
offset_left = 289.0
offset_top = 411.0
offset_right = 596.0
offset_bottom = 480.0
text = "cognitivism"
label_settings = SubResource("LabelSettings_gqysk")

[node name="Word4" type="Label" parent="."]
offset_left = 288.0
offset_top = 532.0
offset_right = 595.0
offset_bottom = 601.0
text = "constructivism"
label_settings = SubResource("LabelSettings_gqysk")

[node name="Word5" type="Label" parent="."]
offset_left = 285.0
offset_top = 677.0
offset_right = 682.0
offset_bottom = 746.0
text = "experiential learning"
label_settings = SubResource("LabelSettings_gqysk")

[node name="CheckButton" type="TextureButton" parent="."]
offset_left = 1184.0
offset_top = 954.0
offset_right = 1224.0
offset_bottom = 994.0
scale = Vector2(1.99352, 1.88344)
texture_normal = ExtResource("2_u0irq")

[node name="ExitButton" type="TextureButton" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = 1811.0
offset_top = 47.0
offset_right = 1849.0
offset_bottom = 87.0
scale = Vector2(1.79705, 1.83249)
texture_normal = ExtResource("2_u0irq")

[node name="UserText" type="LineEdit" parent="."]
offset_left = 768.0
offset_top = 960.0
offset_right = 1152.0
offset_bottom = 1024.0
placeholder_text = "Answer Here"
alignment = 1
max_length = 21

[node name="Andragogy" type="Sprite2D" parent="."]
position = Vector2(1004.8, 244.8)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_j7o30")

[node name="Constructivism" type="Sprite2D" parent="."]
position = Vector2(1268.8, 506.8)
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_wlmub")

[node name="Cognitivism" type="Sprite2D" parent="."]
position = Vector2(1484.8, 242.8)
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_flse2")

[node name="ExperientialLearning" type="Sprite2D" parent="."]
position = Vector2(961.8, 486.8)
scale = Vector2(0.6, 0.6)
texture = ExtResource("6_iyd71")

[node name="SocialLearning" type="Sprite2D" parent="."]
position = Vector2(1052.8, 608.8)
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_a6isc")

[connection signal="pressed" from="CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
